force-app/main/default/objects/Receipt_Amount__c/Receipt_Amount__c.object-meta.xml
<CustomObject>
    <label>Receipt Amount</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Receipt Amount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Amounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>