force-app/main/default/objects/Receipt_Amount__c/fields/Cheque_Number__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Number__c</fullName>
    <label>Cheque Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>