force-app/main/default/objects/Receipt_Amount__c/fields/Cheque_Status__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Status__c</fullName>
    <description>Finance Center: lifecycle of a cheque payment line (PDC calendar / bounced follow-up). INFORMATIONAL ONLY — money reversal for a bounced cheque still uses the existing mechanisms (negative allocation line or receipt cancel); the FinancialEngine does not read this field.</description>
    <label>Cheque Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Deposited</fullName>
            </value>
            <value>
                <fullName>Cleared</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Replaced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>