force-app/main/default/objects/Receipt_Amount__c/fields/Cumulative_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Paid_Amount__c</fullName>
    <label>Cumulative Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>