force-app/main/default/objects/Receipt_Amount__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Receipt Amounts</relationshipLabel>
    <relationshipName>Receipt_Amounts</relationshipName>
    <type>Lookup</type>
</CustomField>