force-app/main/default/objects/Receipt_Amount__c/fields/POS_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>POS_Receipt_Number__c</fullName>
    <label>POS Receipt Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>