force-app/main/default/objects/Receipt_Amount__c/fields/Receipt_Payment__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Payment__c</fullName>
    <formula>TEXT( Receipt__r.Payment_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Payment</label>
    <type>Text</type>
</CustomField>